samples/_failures_safe/1761216645_bae30b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_835f0cc3.c: In function ‘main’:
./samples/SAFE/__tmp_835f0cc3.c:156:13: error: expected identifier at end of input
  156 |             for (int j = 0; j < sm->
      |             ^~~
./samples/SAFE/__tmp_835f0cc3.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_835f0cc3.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_835f0cc3.c:156:13: error: expected declaration or statement at end of input
